--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,14 +4,53 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.dragneel.chessapp.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/linearid"
+        android:transitionGroup="true"
+        android:padding="40dp"
+        android:layout_centerHorizontal="false"
+        android:layout_centerInParent="false"
+        android:layout_centerVertical="false"
+        android:gravity="bottom"
+        android:weightSum="1">
+
+
+        <Button
+            android:text="2 Player Game"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/playbutton"
+            android:layout_weight="0.08"
+            android:textSize="24sp"
+            android:background="@drawable/butback"/>
+
+        <Button
+            android:text="Vs Computer"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/botplaybutton"
+            android:layout_weight="0.08"
+            android:textSize="24sp"
+            android:background="@drawable/butback"/>
+
+        <Button
+            android:text="Settings"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:id="@+id/settingbutton"
+            android:layout_weight="0.08"
+            android:textSize="24sp"
+            android:background="@drawable/butback"/>
+    </LinearLayout>
+
 </RelativeLayout>
