--- a/app/src/main/res/layout/activity_choice.xml
+++ b/app/src/main/res/layout/activity_choice.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_choice"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/back"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.dragneel.chessapp.MainActivity">
+    tools:context="com.example.dragneel.chessapp.choice">
 
     <LinearLayout
         android:orientation="vertical"
@@ -22,35 +21,37 @@
         android:layout_centerInParent="false"
         android:layout_centerVertical="false"
         android:gravity="bottom"
+        android:background="@drawable/back"
         android:weightSum="1">
 
 
+        <TextView
+            android:text="Choose Color"
+            android:textColor="#ffffff"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/choicetv"
+            android:layout_weight="0.08"
+            android:textSize="24sp" />
+
         <Button
-            android:text="2 Player Game"
+            android:text="WHITE"
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:id="@+id/playbutton"
+            android:id="@+id/whitebutton"
             android:layout_weight="0.08"
             android:textSize="24sp"
             android:background="@drawable/butback"/>
 
         <Button
-            android:text="Vs Computer"
-            android:layout_width="wrap_content"
+            android:text="BLACK"
+            android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:id="@+id/botplaybutton"
+            android:id="@+id/blackbutton"
             android:layout_weight="0.08"
             android:textSize="24sp"
             android:background="@drawable/butback"/>
 
-        <Button
-            android:text="Settings"
-            android:layout_width="wrap_content"
-            android:layout_height="100dp"
-            android:id="@+id/settingbutton"
-            android:layout_weight="0.08"
-            android:textSize="24sp"
-            android:background="@drawable/butback"/>
     </LinearLayout>
 
 </RelativeLayout>
