--- a/app/src/main/res/layout/activity_boardact.xml
+++ b/app/src/main/res/layout/activity_boardact.xml
@@ -8,16 +8,25 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@drawable/wood"
     android:orientation="vertical"
     tools:context="com.example.dragneel.chessapp.boardact">
+
+    <!--
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/grid2"
+        >
+    </GridLayout>
 
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/gridlayoutid">
 
-
-
     </GridLayout>
+
+-->
 
 </LinearLayout>
